# grace-compiler

./: .gitignore  Makefile  Notes_for_Kriton.txt  README.md  TODOs.txt  lexer  lexer.ml  lexer.mll  setup.sh  symbol_table_notes.txt  todos.rtf
examples/: achilleas.grc  array_temp.grc  bsort.grc  check_scope1.grc  colortext.grc  dummy.grc  hanoi_test.grc  hello.grc  hello2.grc  hello2.grc~  hello3.grc  llvm16_test.grc  llvm_test1.grc  llvm_test2.grc  llvm_test3.grc  llvm_test4.grc  llvm_test5.grc  llvm_test6.grc  llvm_test7.grc  llvm_test8.grc  llvm_test_block.grc  p1.grc  p2.grc  p3.grc  p4.grc  p5.grc  semtest1.txt  stack_test.grc  strrev.grc  test.grc  test1.grc  test2.grc  test4.grc  test5.grc  test6.grc  test_arrays.grc  test_ifs.grc  test_last.grc  type_test1.grc
examples/progs/: p1.grc  p10.grc  p100.grc  p11.grc  p12.grc  p13.grc  p14.grc  p15.grc  p16.grc  p17.grc  p18.grc  p19.grc  p2.grc  p20.grc  p21.grc  p22.grc  p23.grc  p24.grc  p25.grc  p26.grc  p27.grc  p28.grc  p29.grc  p3.grc  p30.grc  p31.grc  p32.grc  p33.grc  p34.grc  p35.grc  p36.grc  p37.grc  p38.grc  p39.grc  p4.grc  p40.grc  p41.grc  p42.grc  p43.grc  p44.grc  (+60 more)
lexer/: Makefile  lexer.mll
llvm_compiler/: a.ll  compile.sh  compile_batch.sh  dune-project  exec  llvm_compiler.opam  llvm_ir.ll  out.s
llvm_compiler/src/: Makefile  ast.ml  compiler.ml  compiler_helpers.ml  dune  lexer.mll  main.ml  parser.mly  semantic.ml  symbol.ml  symbol_tables.ml
others/: first-follow_sets.rtf
others/lab/lexer/: lexer.l  readme.rtf
others/labs_code/3_ocaml_interp/: Ast.ml  Ast.mli  Lexer.mll  Main.ml
others/labs_code/3_ocaml_interp-hof/: Lexer.mll  Main.ml
others/labs_code/4_ocaml_blocks/: Symbol.ml
others/labs_code/5_ocaml_compiler/: .depend  Ast.cmi  Ast.cmo  Ast.ml  Lexer.cmi  Lexer.cmo  Lexer.ml  Main.cmi  Main.cmo  Main.ml  Makefile  Parser.cmi  Parser.cmo  Parser.mly  do.sh  minibasic  test.s
others/labs_code/5_ocaml_llvm/: Ast.ml  Makefile
others/labs_code/c_interpreter/: Makefile  ast.hpp  parser.y
others/labs_code/c_lexer/: lex.yy.c  lexer
others/labs_code/c_llvm/: Makefile  ast.cpp  ast.hpp  count.ll  lexer.hpp  mbc.sh  parser.y
others/labs_code/c_parser/: Makefile  lexer.l  parser.y
others/labs_code/c_parser-ast/: ast.hpp  lexer.l  parser.y
others/labs_code/c_semantic-1/: ast.hpp  lexer.l  parser.y
others/labs_code/c_semantic-2/: Makefile  (+3 more)
parser/: Makefile  main.ml  parser.mly
parser-ast/: Makefile  ast.ml  ast.mli  lexer.cmi  lexer.cmo  lexer.ml  lexer.mli  lexer.mll  main.cmi  main.cmo  main.ml  parser  parser.cmi  parser.cmo  parser.ml  parser.mli  parser.mly  test.sh
parser-sem/: Makefile  Makefile3  ast.ml  ast.mli  lexer.mll  main.ml  parser.mly  semantic.ml  symbol.ml  symbolTable.ml
(+16 files in other folders)
