(lang dune 3.10)

(using menhir 2.1)

(name llvm_compiler)

(generate_opam_files true)

(source
 (github kritonios01/grace-compiler))

(authors "Kriton Iordanidis")

(package
 (name llvm_compiler)
 (synopsis "Grace Compiler")
 (description "")
 (depends ocaml dune)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
