(library
	(name ast)
	(modules ast))

(library
	(name symbol)
	(modules symbol)
	(libraries ast llvm))

(library
	(name semantic)
	(modules semantic)
	(libraries ast symbol))


(ocamllex lexer)

(menhir
 	(modules parser))



(executable
	(name main)
	(public_name main)
	(libraries 
			semantic 
			ast 
			symbol 
			compiler)
	(modules main parser lexer)
)

(library
	(name compiler)
	(modules compiler)
	(libraries 
			llvm
			llvm.scalar_opts
			llvm.all_backends
			llvm.analysis
			ast
			symbol)
)

; sto telos na kanw ena hide warnings