(library
	(name ast)
	(modules ast))

(library
	(name symbol)
	(modules symbol)
	(libraries ast llvm))

(library
	(name semantic)
	(modules semantic)
	(libraries ast symbol))


(ocamllex lexer)

(menhir
 	(modules parser))



(executable
	(name main)
	(public_name main)
	(libraries 
			semantic 
			ast 
			symbol 
			compiler)
	(modules main parser lexer)
	;(link_flags -cclib -L/usr/lib/llvm15/lib -cclib -lLLVM-15 -ccopt -I/usr/lib/llvm15/include -cclib -lstdc++)
 ;(c_library_flags -L/usr/lib/llvm15/lib -lstdc++ -lLLVM-15)
)

(library
	(name compiler)
	(modules compiler)
	(libraries 
			llvm
			llvm.scalar_opts
			llvm.all_backends
			llvm.analysis
			ast
			symbol)
)

; sto telos na kanw ena hide warnings