(library
	(name ast)
	(modules ast))

(library
	(name symbol_tables)
	(modules symbol_tables)
	(libraries ast llvm))

(library
	(name semantic)
	(modules semantic)
	(libraries ast symbol_tables))


(ocamllex lexer)

(menhir
 	(modules parser))



(executable
	(name main)
	(public_name main)
	(ocamlopt_flags -O3)
	(libraries 
			semantic 
			ast 
			symbol_tables 
			compiler)
	(modules main parser lexer)
	;(link_flags -cclib -L/usr/lib/llvm15/lib -cclib -lLLVM-15 -ccopt -I/usr/lib/llvm15/include -cclib -lstdc++)
 ;(c_library_flags -L/usr/lib/llvm15/lib -lstdc++ -lLLVM-15)
)

(library
	(name compiler)
	(modules compiler)
	(libraries 
			llvm
			llvm.scalar_opts
			llvm.all_backends
			llvm.analysis
			ast
			symbol_tables
			compiler_helpers)
)

(library
		(name compiler_helpers)
		(modules compiler_helpers)
		(libraries symbol_tables llvm)
)

; sto telos na kanw ena hide warnings